# app-services-sdk-core

./: .gitignore  service-accounts.yaml
.github/workflows/: api-update.yaml  generate-sdks.yaml  release-java.yaml  release.yaml
.openapi/: account-management.json  kas-fleet-manager.yaml
app-services-sdk-go/: go.mod
app-services-sdk-go/accountmgmt/: go.mod
app-services-sdk-go/auth/: go.mod
app-services-sdk-go/connectormgmt/: go.mod
app-services-sdk-go/kafkainstance/: go.mod
app-services-sdk-go/kafkamgmt/: go.mod
app-services-sdk-go/registryinstance/: go.mod
app-services-sdk-go/registrymgmt/: go.mod
app-services-sdk-go/serviceaccountmgmt/: go.mod
app-services-sdk-go/smarteventsmgmt/: go.mod
app-services-sdk-java/: pom.xml
app-services-sdk-java/account-management-sdk/: pom.xml
app-services-sdk-java/connector-management-sdk/: pom.xml
app-services-sdk-java/kafka-instance-sdk/: pom.xml
app-services-sdk-java/kafka-management-sdk/: pom.xml
app-services-sdk-js/: package.json
app-services-sdk-python/: Makefile  pyproject.toml  requirements.in  requirements.txt
app-services-sdk-python/sdks/kafka_mgmt_sdk/docs/: DefaultApi.md
app-services-sdk-python/sdks/kafka_mgmt_sdk/rhoas_kafka_mgmt_sdk/model/: cloud_provider_list_all_of.py  cloud_region_list_all_of.py  enterprise_cluster_list_all_of.py  error_list_all_of.py  kafka_request_list_all_of.py  list.py
app-services-sdk-python/sdks/kafka_mgmt_sdk/test/: test_list.py
app-services-sdk-ts/: Makefile
scripts/: fetch-api.sh  generate-go.sh  generate-java.sh  generate-js.sh  generate-py.sh
(+657 files in other folders)
