[tool.poetry]
name = "rhoas_sdks"
version = "0.1.0"
description = "A package which includes RHOAS SDKs"
authors = ["jackdelahunt <jdelahun@redhat.com>"]
license = "Apache License"
readme = "docs/README.md"
packages = [
    { include = "connector_mgmt_sdk/" },
    { include = "kafka_instance_sdk/"},
    { include = "registry_mgmt_sdk/"},
    { include = "kafka_mgmt_sdk/"},
    { include = "registry_instance_sdk/"},
    { include = "smart_events_mgmt_sdk/"},
    { include = "service_accounts_mgmt_sdk" },
    { include = "auth"}
]

[tool.poetry.dependencies]
python = "^3.9"
microsoft-kiota-abstractions = "*"
microsoft-kiota-http = "*"
microsoft-kiota-serialization-json = "*"
microsoft-kiota-serialization-text = "*"
python-keycloak = "^2.5.0"

[tool.poetry.dev-dependencies]
poetry = "^1.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
